--- a/gallery/index.html
+++ b/gallery/index.html
@@ -2,6 +2,7 @@
 layout: default
 ---
 
+<div class="home">
 <div class="gallery col-three">
     <div class="col col-nav gallery-thumbs" id="gallery-thumbs">
         <div class="current">
@@ -20,4 +21,5 @@ layout: default
         <h3>Image Title 1</h3>
         <p>Image description 1</p>
     </div>
+</div>
 </div>
