--- a/index.html
+++ b/index.html
@@ -47,7 +47,16 @@ layout: default
             </p>
         </div>   
     </div>
+    
+    <div class="home-section">
+        <h4>Most recent post</h4>
+        <div class="col col-content blog-previews">
+            {% for post in site.posts limit:1 %}
+            {% include post-excerpt.html %}
+            {% endfor %}
 
+
+    </div>
 
 
     <div class="home-section">
